# SDL

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/SDL/: Color.hpp  Error.hpp  Event.hpp  Matrix.hpp  Properties.hpp  Rect.hpp  Renderer.hpp  Shape.hpp  Shapes.hpp  Surface.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vector.hpp  Vertex.hpp  Window.hpp
include/SDLPP/: APIObject.hpp  Angle.hpp  Color.hpp  Drawable.hpp  FramerateLimiter.hpp  Init.hpp  Math.hpp  Matrix.hpp  Rect.hpp  SDLPP.hpp  Texture.hpp  Timer.hpp  Transform.hpp  Vertex.hpp  Window.hpp
lib/: libSDL3_image.so.0.2.4
src/: Color.cpp  Error.cpp  FramerateLimiter.cpp  Init.cpp  Math.cpp  Properties.cpp  Renderer.cpp  Shape.cpp  Shapes.cpp  Surface.cpp  Texture.cpp  Timer.cpp  Transform.cpp  Transformable.cpp  Vertex.cpp  Window.cpp
